--- a/TKV2025_soubory/sheet005.htm
+++ b/TKV2025_soubory/sheet005.htm
@@ -95,7 +95,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=11 height=58 class=xl190 style='border-right:.5pt solid black;
+  <td colspan=11 height=58 class=xl191 style='border-right:.5pt solid black;
   height:43.5pt'>TOUR KRAJE VYSOČINA 2025 - VÍTĚZOVÉ - DI</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -133,7 +133,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl175 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl176 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
   border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext;
@@ -381,13 +381,13 @@ else
   <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
   mso-pattern:black none'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#ACC4DF;
-  mso-pattern:black none'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#A6C0DD;
+  mso-pattern:black none'>11</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#91B0D5;
-  mso-pattern:black none'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#8BACD4;
+  mso-pattern:black none'>16</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -590,6 +590,34 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vierer Jaromír
+  [CZE059373]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
+  mso-pattern:black none'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
+  mso-pattern:black none'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#BCCFE5;
+  mso-pattern:black none'>7</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>12</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
   [CZE056087]</td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
@@ -616,7 +644,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>12</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>13</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Majer Vít [CZE001201]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
@@ -643,22 +671,19 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vierer Jaromír
-  [CZE059373]</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Novák Radek [CZE049908]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
+  mso-pattern:black none'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#D7E3EF;
-  mso-pattern:black none'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
-  mso-pattern:black none'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#C1D3E7;
-  mso-pattern:black none'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
+  mso-pattern:black none'>5</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -671,7 +696,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>14</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>15</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Miroslav
   [CZE056477]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -699,7 +724,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>15</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>16</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Navrátil Karel
   [CZE009044]</td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
@@ -727,57 +752,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>16</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
-  mso-pattern:black none'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
-  mso-pattern:black none'>5</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>17</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Novák Radek [CZE049908]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
-  mso-pattern:black none'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
-  mso-pattern:black none'>5</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>18</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Bártl David [CZE001696]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -802,7 +777,57 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>18</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
+  mso-pattern:black none'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
+  mso-pattern:black none'>5</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>19</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
+  mso-pattern:black none'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#C7D7E9;
+  mso-pattern:black none'>5</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>20</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
   [CZE071305]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -829,83 +854,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>20</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#CCDBEB;
-  mso-pattern:black none'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#CCDBEB;
-  mso-pattern:black none'>4</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>21</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Beneš Petr [CZE070315]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
-  mso-pattern:black none'>3</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
-  mso-pattern:black none'>3</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
-  [CZE055580]</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
-  mso-pattern:black none'>3</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
-  mso-pattern:black none'>3</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>23</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vrzáček Josef [CZE070728]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -931,8 +880,59 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>24</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>22</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Brůna Jiří [CZE002020]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
+  mso-pattern:black none'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
+  mso-pattern:black none'>3</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>23</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
+  [CZE055580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
+  mso-pattern:black none'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#D2DFED;
+  mso-pattern:black none'>3</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>24</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Beneš Petr [CZE070315]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
