--- a/TKV2026_soubory/sheet005.htm
+++ b/TKV2026_soubory/sheet005.htm
@@ -46,12 +46,12 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=1379 style='border-collapse:
- collapse;table-layout:fixed;width:1041pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=1395 style='border-collapse:
+ collapse;table-layout:fixed;width:1053pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=181 style='mso-width-source:userset;mso-width-alt:6619;
- width:136pt'>
+ <col class=xl70 width=197 style='mso-width-source:userset;mso-width-alt:7204;
+ width:148pt'>
  <col class=xl70 width=107 style='mso-width-source:userset;mso-width-alt:3913;
  width:80pt'>
  <col class=xl70 width=78 style='mso-width-source:userset;mso-width-alt:2852;
@@ -71,7 +71,7 @@ else
  <col class=xl70 width=50 span=10 style='width:38pt'>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 width=47 style='height:15.0pt;width:35pt'></td>
-  <td class=xl70 width=181 style='width:136pt'></td>
+  <td class=xl70 width=197 style='width:148pt'></td>
   <td class=xl70 width=107 style='width:80pt'></td>
   <td class=xl70 width=78 style='width:59pt'></td>
   <td class=xl70 width=70 style='width:53pt'></td>
@@ -93,7 +93,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=12 height=58 class=xl177 style='border-right:.5pt solid black;
+  <td colspan=12 height=58 class=xl182 style='border-right:.5pt solid black;
   height:43.5pt'>TOUR KRAJE VYSOČINA 2026 - VÍTĚZOVÉ - DIDO</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -130,7 +130,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl197 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
   border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
@@ -157,7 +157,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl197 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl173 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   mso-background-source:auto;mso-pattern:#4F81BD none'>Hra</td>
@@ -367,17 +367,16 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>3</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#96B4D7;
+  mso-pattern:black none'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#96B4D7;
   mso-pattern:black none'>2</td>
   <td class=xl70></td>
@@ -419,6 +418,132 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#96B4D7;
+  mso-pattern:black none'>2</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Koukal Jiří [CZE061258]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Daniel Michal [CZE075751]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Benda Lukáš [CZE026430]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>9</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>10</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Navrátil Karel
   [CZE009044]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -444,15 +569,15 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
@@ -469,7 +594,33 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>7</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>12</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
+  [CZE071305]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>13</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
   [CZE055580]</td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
@@ -495,7 +646,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>8</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>14</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vierer Jaromír
   [CZE059373]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -521,32 +672,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>10</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>15</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Rosecký Václav
   [CZE084601]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -572,13 +698,14 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>11</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Daniel Michal [CZE075751]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>16</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Miroslav
+  [CZE056477]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -597,7 +724,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>12</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>17</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Šulgovskij Alex
   [CZE064273]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -2439,125 +2566,10 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
   <td width=47 style='width:35pt'></td>
-  <td width=181 style='width:136pt'></td>
+  <td width=197 style='width:148pt'></td>
   <td width=107 style='width:80pt'></td>
   <td width=78 style='width:59pt'></td>
   <td width=70 style='width:53pt'></td>
