--- a/TKV2026_soubory/sheet019.htm
+++ b/TKV2026_soubory/sheet019.htm
@@ -46,12 +46,12 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=9436 style='border-collapse:
- collapse;table-layout:fixed;width:7103pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=9563 style='border-collapse:
+ collapse;table-layout:fixed;width:7198pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=185 style='mso-width-source:userset;mso-width-alt:6765;
- width:139pt'>
+ <col class=xl70 width=196 style='mso-width-source:userset;mso-width-alt:7168;
+ width:147pt'>
  <col class=xl70 width=128 style='mso-width-source:userset;mso-width-alt:4681;
  width:96pt'>
  <col class=xl70 width=41 style='mso-width-source:userset;mso-width-alt:1499;
@@ -88,8 +88,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=196 style='mso-width-source:userset;mso-width-alt:7168;
+ width:147pt'>
  <col class=xl70 width=102 style='mso-width-source:userset;mso-width-alt:3730;
  width:77pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -276,7 +276,7 @@ else
  width:77pt'>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 width=47 style='height:15.0pt;width:35pt'></td>
-  <td class=xl70 width=185 style='width:139pt'></td>
+  <td class=xl70 width=196 style='width:147pt'></td>
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=41 style='width:31pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
@@ -300,7 +300,7 @@ else
   <td class=xl70 width=102 style='width:77pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=196 style='width:147pt'></td>
   <td class=xl70 width=102 style='width:77pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -408,7 +408,7 @@ else
   <td class=xl70 width=102 style='width:77pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl177 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl182 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2026 - KOVÁRNA - CELKOVÉ
   POŘADÍ</td>
   <td class=xl143>&nbsp;</td>
@@ -1086,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>3</td>
+  <td class=xl164 style='border-left:none'>4</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1221,7 +1221,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>6,0</td>
+  <td class=xl148 style='border-top:none;border-left:none'>6,7</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1349,15 +1349,14 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Rosecký Václav
-  [CZE084601]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2400</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl164 style='border-top:none;border-left:none'>2</td>
+  <td class=xl164 style='border-top:none;border-left:none'>3</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1576,8 +1575,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2300</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1800,9 +1799,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
+  [CZE080084]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2000</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2024,8 +2024,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Doležal Hynek [CZE082925]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1900</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2158,16 +2158,16 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
-  [CZE080084]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Rosecký Václav
+  [CZE084601]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1700</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Barták Martin [CZE084602]</td>
+  <td class=xl82 style='border-top:none'>Fábera Jiří [CZE075508]</td>
   <td class=xl145 style='border-left:none'>1</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2506,16 +2506,16 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Barták Vojtěch
-  [CZE084846]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Miroslav
+  [CZE056477]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Fábera Jiří [CZE075508]</td>
+  <td class=xl82 style='border-top:none'>Kříž Miroslav [CZE068544]</td>
   <td class=xl82 style='border-top:none;border-left:none'>1</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2536,9 +2536,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2648,17 +2650,16 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Sedláček Pavel
-  [CZE054627]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>0</td>
-  <td class=xl82 style='border-top:none;border-left:none'>0</td>
+  <td class=xl82 style='border-top:none'>Barták Martin [CZE084602]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>1</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2677,6 +2678,12 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
+  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
@@ -2782,16 +2789,15 @@ else
   <td class=xl94></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Sedláček Pavel
+  [CZE054627]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2815,6 +2821,13 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
   [CZE080084]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
+  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Miroslav
+  [CZE056477]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
@@ -2920,16 +2933,14 @@ else
   <td class=xl94></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Minster Marek [CZE026339]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1100</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2953,6 +2964,12 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Barták Vojtěch
   [CZE084846]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
+  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Minster Marek [CZE026339]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
@@ -3058,16 +3075,15 @@ else
   <td class=xl94></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Vojtěch
+  [CZE084846]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3093,9 +3109,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Sedláček Pavel
+  [CZE054627]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3228,9 +3247,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Doležal Hynek [CZE082925]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
+  [CZE080084]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3364,9 +3386,11 @@ else
   [CZE084601]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3497,9 +3521,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Hynek [CZE082925]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14115,7 +14141,7 @@ else
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
   <td width=47 style='width:35pt'></td>
-  <td width=185 style='width:139pt'></td>
+  <td width=196 style='width:147pt'></td>
   <td width=128 style='width:96pt'></td>
   <td width=41 style='width:31pt'></td>
   <td width=50 style='width:38pt'></td>
@@ -14139,7 +14165,7 @@ else
   <td width=102 style='width:77pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=196 style='width:147pt'></td>
   <td width=102 style='width:77pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
